@@ -14,6 +14,9 @@
   o try harder to find genhdlist2 in uninstalled CPAN modules
   o work without glibc-static-devel
   o workaround %find_lang sometimes failing on FreeBSD
+- library:
+  o fix rpm version check causing strange warning messages:
+    "shell-init: error retrieving current directory: getcwd: cannot access parent directories: No such file or directory"
 - testsuite:
   o add more extensive tests
   o describe it more
